--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },"proxy":"https://jdrworld.herokuapp.com/api/"
+  },"proxy":"https://jdrworld.herokuapp.com/api"
 }
