--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "heroku-prebuild": "npm install -g serve",
-    "devstart": "react-scripts start",
-    "start": "serve -s build",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-  },
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
