--- a/package.json
+++ b/package.json
@@ -14,14 +14,11 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": " npm run start",
-    "install": " npm install",
-    "build": " npm run build",
-    "heroku-postbuild": "npm run build"
-},
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
