--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,8 @@
   from = "/api/*"
   to = "https://jdrworld.herokuapp.com/api/:splat"
   status = 200
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
