--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,8 @@
   to = "https://jdrworld.herokuapp.com/api/:splat"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
